--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .dashboard-heading {
+        @apply text-2xl underline font-bold text-gray-700;
+    }
+    .badge-btn {
+        @apply px-3 py-1 text-sm rounded-md font-semibold;
+    }
+    .table-header {
+        @apply text-sm font-bold text-gray-700 py-3;
+    }
+    .table-data {
+        @apply text-xs text-gray-700 font-semibold text-center py-4;
+    }
+}
