--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,4 +15,7 @@
     .table-data {
         @apply text-xs text-gray-700 font-semibold text-center py-4;
     }
+    .form-input {
+        @apply col-span-3 focus:outline-none px-3 py-2 border border-gray-300 rounded-md;
+    }
 }
