feat: add fir listing in admin dashboard, minor changes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,10 +14,10 @@
         @apply px-3 py-1 text-sm rounded-md font-semibold;
     }
     .table-header {
-        @apply text-sm font-bold text-gray-700 py-3;
+        @apply text-sm font-semibold text-white py-3;
     }
     .table-data {
-        @apply text-xs text-gray-700 font-semibold text-center py-4;
+        @apply text-xs text-gray-700 font-semibold text-center py-3;
     }
     .form-input {
         @apply col-span-3 font-normal focus:outline-none px-3 py-2 border border-gray-300 rounded-md;
@@ -26,7 +26,7 @@
         @apply px-3 py-1 text-[10px] rounded-md bg-[#191825] text-white font-semibold hover:bg-white hover:text-[#191825] hover:border-[#191825] border border-[#191825];
     }
     .add-officer-btn {
-        @apply px-3 py-1 text-[10px] rounded-md bg-[#191825] text-white font-semibold hover:bg-white hover:text-[#191825] hover:border-[#191825] border border-[#191825];
+        @apply px-3 py-1 text-[11px] rounded-md bg-[#191825] text-white font-semibold hover:bg-white hover:text-[#191825] hover:border-[#191825] border border-[#191825];
     }
     .permission-btn {
         @apply p-1 text-sm !important;
